--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtHelloWorld"
-        app:srcCompat="@drawable/Lion" />
+        app:srcCompat="@drawable/lion" />
 
     <ImageView
         android:id="@+id/tiger"
@@ -59,6 +59,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtHelloWorld"
-        app:srcCompat="@drawable/Tiger" />
+        app:srcCompat="@drawable/tiger" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
