Final logic added (Tie, restart etc.)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:alpha="1"
     android:background="#FFFFFF"
     tools:context=".MainActivity">
 
@@ -11,6 +12,7 @@
         android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         android:clickable="false"
         app:columnCount="3"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,8 +26,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="7"
@@ -39,8 +40,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="1"
@@ -54,8 +54,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="8"
@@ -69,8 +68,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="5"
@@ -84,8 +82,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="6"
@@ -99,8 +96,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="4"
@@ -114,8 +110,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="9"
@@ -129,8 +124,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="2"
@@ -144,8 +138,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:alpha="1"
             android:clickable="false"
             android:onClick="tapped"
             android:tag="3"
@@ -154,5 +147,40 @@
             app:layout_row="0"
             app:srcCompat="@android:color/darker_gray" />
     </androidx.gridlayout.widget.GridLayout>
+
+    <Button
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_red_light"
+        android:onClick="restart"
+        android:text="Play Again"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+
+    <ImageView
+        android:id="@+id/brainPlayer"
+        android:layout_width="119dp"
+        android:layout_height="113dp"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintEnd_toStartOf="@+id/heartPlayer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/brain" />
+
+    <ImageView
+        android:id="@+id/heartPlayer"
+        android:layout_width="119dp"
+        android:layout_height="113dp"
+        android:alpha="0.4"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/brainPlayer"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/heart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
